--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -8,10 +8,24 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@
+
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 2.2.108
+
     - name: Build with dotnet
       run: dotnet build --configuration Release
+
+    - name: Generate NuGet Packages
+      run: dotnet pack -c Release -o dist
+
+    - name: Install NuGet client
+      uses: warrenbuckley/Setup-Nuget@v1
+
+    - name: Add private GitHub registry to NuGet
+      run: nuget sources add -name "GitHub" -Source "https://nuget.pkg.github.com/$GITHUB_ACTOR/index.json" -Username $GITHUB_ACTOR -Password ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Push generated package to GitHub registry
+      run: nuget push .\dist\*.nupkg -Source "GitHub" -SkipDuplicate
