--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -25,7 +25,7 @@ jobs:
       uses: warrenbuckley/Setup-Nuget@v1
 
     - name: Add private GitHub registry to NuGet
-      run: nuget sources add -name "GitHub" -Source "https://nuget.pkg.github.com/$GITHUB_ACTOR/index.json" -Username $GITHUB_ACTOR -Password ${{ secrets.GITHUB_TOKEN }}
+      run: nuget sources add -name "GitHub" -Source "https://nuget.pkg.github.com/${{ github.actor }}/index.json" -Username ${{ github.actor }} -Password ${{ secrets.GITHUB_TOKEN }}
 
     - name: Push generated package to GitHub registry
       run: nuget push .\dist\*.nupkg -Source "GitHub" -SkipDuplicate
