--- a/MenuExample/MenuExample.csproj
+++ b/MenuExample/MenuExample.csproj
@@ -1,21 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>net48</TargetFramework>
-		<PlatformTarget>x64</PlatformTarget>
-	</PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net48</TargetFramework>
+        <PlatformTarget>x64</PlatformTarget>
+        <IsPackable>false</IsPackable>
+    </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="ScriptHookVDotNet3" Version="3.0.2" />
-		<!--<PackageReference Include="ScriptHookVDotNet3" Version="3.0.2" />-->
-	</ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="ScriptHookVDotNet3" Version="3.0.2" />
+    </ItemGroup>
 
-	<ItemGroup>
-	  <ProjectReference Include="..\NativeUI\NativeUI.csproj" />
-	</ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\NativeUI\NativeUI.csproj" />
+    </ItemGroup>
 
-	<ItemGroup>
-		<Reference Include="System.Windows.Forms" />
-	</ItemGroup>
+    <ItemGroup>
+        <Reference Include="System.Windows.Forms" />
+    </ItemGroup>
 
 </Project>
